--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/asdfs dfsadf asdf sd f.loader.js";
+      var loaderUrl = buildUrl + "/Gmae.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/asdfs dfsadf asdf sd f.data.br",
-        frameworkUrl: buildUrl + "/asdfs dfsadf asdf sd f.framework.js.br",
-        codeUrl: buildUrl + "/asdfs dfsadf asdf sd f.wasm.br",
+        dataUrl: buildUrl + "/Gmae.data",
+        frameworkUrl: buildUrl + "/Gmae.framework.js",
+        codeUrl: buildUrl + "/Gmae.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "dsfgdsfg",
